[project]
name = "05-pm"
version = "0.1.0"
description = ""
authors = [
    {name = "Michele Lombardi",email = "michele.lombardi2@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notebook (>=7.4.7,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pydot (>=4.0.1,<5.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "tensorflow-probability (>=0.25.0,<0.26.0)",
    "tf-keras (>=2.20.1,<3.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab-rise (>=0.43.1,<0.44.0)",
    "nbconvert[webpdf] (>=7.16.6,<8.0.0)"
]
